--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ authors = [
 ]
 readme = {content-type = "text/plain", file="README.org"}
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "flask>=3.1.1",
+]
