--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,12 @@ readme = {content-type = "text/plain", file="README.org"}
 requires-python = ">=3.10"
 dependencies = [
     "flask>=3.1.1",
+    "requests>=2.32.4",
+]
+
+[dependency-groups]
+dev = [
+    "djlint>=1.36.4",
+    "isort>=6.0.1",
+    "ruff>=0.12.8",
 ]
