--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = {content-type = "text/plain", file="README.org"}
 requires-python = ">=3.10"
 dependencies = [
     "flask>=3.1.1",
+    "gunicorn>=23.0.0",
     "requests>=2.32.4",
 ]
 
